More HTML edits

--- a/Negotiation3/reports/michael_wheeler.html
+++ b/Negotiation3/reports/michael_wheeler.html
@@ -9,7 +9,7 @@
             margin: 10px;
         }
         body {
-            background-image:url("top-banner.png");
+            background-image:url("top-banner-1.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
@@ -17,8 +17,6 @@
     </style>
 </head>
 <body>
-    <div style="height:40px;">
-	</div>
 	<div align="center">
         <img src="mw.jpg" width="125px" height="125px" class="img-circle">
 	</div>
