--- a/Negotiation3/reports/typeG.html
+++ b/Negotiation3/reports/typeG.html
@@ -3,19 +3,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/docs.css" />
     <style>
-        p {
-			margin:20px;
-		}
+        .photo {
+            margin: 10px;
+        }
+        body {
+            background-image:url("top-banner-4.png");
+            background-position: top left;
+            background-repeat: no-repeat;
+            background-size: 100%;
+        }
     </style>
 </head>
 <body>
+	<div align="center">
+        <img src="image-4.png" width="125px" height="125px" class="img-circle">
+	</div>
     <div style="margin:20px">
 		<h4>Type G</h4>
 	</div>
 	
 	<div>
-		<p>About half the users who have completed this test believe that their negotiation strengths lie in understanding other parties and creating value. Your own scores in this realm are higher than most of those people. That strength can serve you well in collaborative situations, but make sure that you can protect yourself in more competitive, price-driven transactions.</p> 
+		<p style="margin: 20px;">About half the users who have completed this test believe that their negotiation strengths lie in understanding other parties and creating value. Your own scores in this realm are higher than most of those people. That strength can serve you well in collaborative situations, but make sure that you can protect yourself in more competitive, price-driven transactions.</p> 
 	</div>	
 		
 	<div class="alert alert-info" style="margin:20px">
