--- a/Negotiation3/reports/typeR.html
+++ b/Negotiation3/reports/typeR.html
@@ -3,19 +3,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/docs.css" />
     <style>
-        p {
-			margin:20px;
-		}
+        .photo {
+            margin: 10px;
+        }
+        body {
+            background-image:url("top-banner-6.png");
+            background-position: top left;
+            background-repeat: no-repeat;
+            background-size: 100%;
+        }
     </style>
 </head>
 <body>
+	<div align="center">
+        <img src="image-6.png" width="125px" height="125px" class="img-circle">
+	</div>
     <div style="margin:20px">
 		<h4>Type R</h4>
 	</div>
-
+	
 	<div>
-		<p>Your profile shows you as having above average skills on the interpersonal scale (4 being average). Being good at asserting your own interests while understanding other people is certainly possible (though most people don't feel that way). But you should ask yourself why that double-advantage doesn't produce better results on the vertical outcome scale.</p>
+		<p style="margin: 20px;">Your profile shows you as having above average skills on the interpersonal scale (4 being average). Being good at asserting your own interests while understanding other people is certainly possible (though most people don't feel that way). But you should ask yourself why that double-advantage doesn't produce better results on the vertical outcome scale.</p>
 	</div>
 		 
 			
