--- a/Negotiation3/reports/typeW.html
+++ b/Negotiation3/reports/typeW.html
@@ -3,19 +3,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/docs.css" />
     <style>
-        p {
-			margin:20px;
-		}
+        .photo {
+            margin: 10px;
+        }
+        body {
+            background-image:url("top-banner-2.png");
+            background-position: top left;
+            background-repeat: no-repeat;
+            background-size: 100%;
+        }
     </style>
 </head>
 <body>
+	<div align="center">
+        <img src="image-2.png" width="125px" height="125px" class="img-circle">
+	</div>
     <div style="margin:20px">
 		<h4>Type W</h4>
 	</div>
-
+	
 	<div>
-		<p>About 40% of the users who have completed this test believe that their negotiation strengths lie in asserting themselves and claiming value. Your scores in this realm are higher than most of those people.<br><br>That strength may serve you well when you have to contend with hard bargainers, but make sure that you can adapt when you are in more collaborative situations where there is potential for joint gain.</p>
+		<p style="margin: 20px;">About 40% of the users who have completed this test believe that their negotiation strengths lie in asserting themselves and claiming value. Your scores in this realm are higher than most of those people.<br><br>That strength may serve you well when you have to contend with hard bargainers, but make sure that you can adapt when you are in more collaborative situations where there is potential for joint gain.</p>
 	</div>	
 			
 	<div class="alert alert-info" style="margin:20px">
