--- a/Negotiation3/reports/typeY.html
+++ b/Negotiation3/reports/typeY.html
@@ -3,19 +3,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/docs.css" />
     <style>
-        p {
-			margin:20px;
-		}
+        .photo {
+            margin: 10px;
+        }
+        body {
+            background-image:url("top-banner-4.png");
+            background-position: top left;
+            background-repeat: no-repeat;
+            background-size: 100%;
+        }
     </style>
 </head>
 <body>
+	<div align="center">
+        <img src="image-4.png" width="125px" height="125px" class="img-circle">
+	</div>
     <div style="margin:20px">
 		<h4>Type Y</h4>
 	</div>
 	
 	<div>
-		<p>Your profile shows that you see yourself as having about the same level of ability in each of the four tested skills (asserting, empathizing, claiming value, and creating value). All of these are important in negotiation, but some cases call for strengths in particular areas.<br><br>If you are haggling over price in a used car lot, you may need to express yourself assertively. But if you are working with a colleague or a long-time customer, understanding the other party may be paramount.</p> 
+		<p style="margin: 20px;">Your profile shows that you see yourself as having about the same level of ability in each of the four tested skills (asserting, empathizing, claiming value, and creating value). All of these are important in negotiation, but some cases call for strengths in particular areas.<br><br>If you are haggling over price in a used car lot, you may need to express yourself assertively. But if you are working with a colleague or a long-time customer, understanding the other party may be paramount.</p> 
 			
 	<div class="alert alert-info" style="margin:20px">
 		<div class="row">
