--- a/Negotiation3/reports/typeC.html
+++ b/Negotiation3/reports/typeC.html
@@ -3,19 +3,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/docs.css" />
     <style>
-        p {
-			margin:20px;
-		}
+        .photo {
+            margin: 10px;
+        }
+        body {
+            background-image:url("top-banner-2.png");
+            background-position: top left;
+            background-repeat: no-repeat;
+            background-size: 100%;
+        }
     </style>
 </head>
 <body>
+	<div align="center">
+        <img src="image-2.png" width="125px" height="125px" class="img-circle">
+	</div>
     <div style="margin:20px">
 		<h4>Type C</h4>
 	</div>
 	
 	<div>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nibh metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer vitae nulla purus. Duis venenatis, urna at suscipit bibendum, purus ligula blandit quam, in consequat nulla metus et dui.<br><br>Suspendisse laoreet commodo mollis. Quisque ultrices aliquam lacinia. Vestibulum faucibus, purus eget bibendum pellentesque, ante arcu aliquet risus, vel adipiscing metus mauris vel arcu. Morbi sed mollis nisi. Aenean sed eleifend justo. Praesent varius lorem lorem, vitae venenatis nibh commodo vitae.</p>
+		<p style="margin: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nibh metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer vitae nulla purus. Duis venenatis, urna at suscipit bibendum, purus ligula blandit quam, in consequat nulla metus et dui.<br><br>Suspendisse laoreet commodo mollis. Quisque ultrices aliquam lacinia. Vestibulum faucibus, purus eget bibendum pellentesque, ante arcu aliquet risus, vel adipiscing metus mauris vel arcu. Morbi sed mollis nisi. Aenean sed eleifend justo. Praesent varius lorem lorem, vitae venenatis nibh commodo vitae.</p>
 	</div>
 
 	<div class="alert alert-info" style="margin:20px">
