HTML Edits for Friday

--- a/Negotiation3/reports/michael_wheeler.html
+++ b/Negotiation3/reports/michael_wheeler.html
@@ -46,6 +46,8 @@
       <a href="http://www.negotiation3-0.com/contact/"  class="list-group-item">Contact Mike</a>
     </div>    
 
+	<div style="height:100px">
+	</div>
     
     <script src="jquery.js"></script>
     <script src="js/bootstrap.js"></script>
