--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -3,18 +3,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="css/bootstrap.css" />
 	<link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/docs.css" />
     <style>
+        .photo {
+            margin: 10px;
+        }
         body {
-			margin:20px;
-		}
+            background-image:url("top-banner-7.png");
+            background-position: top left;
+            background-repeat: no-repeat;
+            background-size: 100%;
+        }
     </style>
 </head>
 <body>
-	<p>You rated yourself <strong>%@</strong> compared to people you typically negotiate with. The reality is that it is hard to rate our overall effectiveness, for the same reasons that it's hard to judge our success in a particular transaction. After all, you usually know only your half of the story: did you leave some value on the table; did you stress an important relationship? The other side may not tell you, so there's plenty of room for self-doubt and worry.</p> 
-	<p>Good negotiators are often modest about their skills. That humility serves them well, as it prompts them to think through their strategy carefully. They also understand that even if they prepare carefully, they have to be agile, ready for surprises, pleasant and otherwise.</p>
-    <p>Ideally, we'd all like to outstanding at each of the four skills: asserting our interests, understanding others, creating value, and claiming our share. As we've already seen, each presents a dilemma or tradeoff. Being more open, for example, may invite either a cooperative response or exploitation, depending on whom we're dealing with. Likewise, firmly asserting our interests may win us a larger share, but if the other party digs in, creativity may be hampered.</p>
-   	
-	<div class="panel-group" id="accordion">
+	<div align="center">
+        <img src="image-7.png" width="125px" height="125px" class="img-circle">
+	</div>
+	<div>
+		<p style="margin: 20px;">You rated yourself <strong>%@</strong> compared to people you typically negotiate with. The reality is that it is hard to rate our overall effectiveness, for the same reasons that it's hard to judge our success in a particular transaction. After all, you usually know only your half of the story: did you leave some value on the table; did you stress an important relationship? The other side may not tell you, so there's plenty of room for self-doubt and worry.</p> 
+	<p style="margin: 20px;">Good negotiators are often modest about their skills. That humility serves them well, as it prompts them to think through their strategy carefully. They also understand that even if they prepare carefully, they have to be agile, ready for surprises, pleasant and otherwise.</p>
+    <p style="margin: 20px;">Ideally, we'd all like to outstanding at each of the four skills: asserting our interests, understanding others, creating value, and claiming our share. As we've already seen, each presents a dilemma or tradeoff. Being more open, for example, may invite either a cooperative response or exploitation, depending on whom we're dealing with. Likewise, firmly asserting our interests may win us a larger share, but if the other party digs in, creativity may be hampered.</p>
+   	</div>
+	<div class="panel-group" id="accordion" style="margin: 20px;">
 	  <div class="panel panel-info">
 	    <div class="panel-heading">
 	      <h4 class="panel-title">
@@ -23,7 +34,7 @@
 	        </a>
 	      </h4>
 	    </div>
-	    <div id="collapseOne" class="panel-collapse collapse in">
+	    <div id="collapseOne" class="panel-collapse collapse">
 			<ul class="list-group">
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Inquire. Without realizing it, many negotiators fail to test their assumptions about the other parties needs and perceptions.</li>
 		        <li class="list-group-item" style="text-align: left; font-size:14px">Listen deeply. Don't prejudge. Be alert for ideas you can build on.</li>
@@ -83,6 +94,9 @@
 		    </ul>
 	    </div>
 	  </div>
+	</div>
+	
+	<div style="height:100px">
 	</div>
 
     <script src="jquery.js"></script>
