--- a/Negotiation3/reports/typeW.html
+++ b/Negotiation3/reports/typeW.html
@@ -9,7 +9,7 @@
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-2.png");
+            background-image:url("top-banner-3.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<div align="center">
-        <img src="image-2.png" width="125px" height="125px" class="img-circle">
+        <img src="image-3.png" width="125px" height="125px" class="img-circle">
 	</div>
     <div style="margin:20px">
 		<h4>Type W</h4>
@@ -37,6 +37,9 @@
 				Check out the skill-building tips and give speciation attention to how you can enhance your skill at reading other people's motivations and craft creative solutions.
 			</div>
 		</div>
+	</div>
+	
+	<div style="height:100px">
 	</div>
 			
     <script src="jquery.js"></script>
