--- a/Negotiation3/reports/typeY.html
+++ b/Negotiation3/reports/typeY.html
@@ -9,7 +9,7 @@
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-4.png");
+            background-image:url("top-banner-6.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<div align="center">
-        <img src="image-4.png" width="125px" height="125px" class="img-circle">
+        <img src="image-6.png" width="125px" height="125px" class="img-circle">
 	</div>
     <div style="margin:20px">
 		<h4>Type Y</h4>
@@ -36,6 +36,9 @@
 				Check out the skill-building tips for ways you can stretch yourself so you can adapt to different situations.
 			</div>
 		</div>
+	</div>
+	
+	<div style="height:100px">
 	</div>
 
     <script src="jquery.js"></script>
