--- a/Negotiation3/reports/typeG.html
+++ b/Negotiation3/reports/typeG.html
@@ -39,6 +39,9 @@
 		</div>
 	</div>
 	
+	<div style="height:100px">
+	</div>
+	
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
     <script src="highcharts-more.js"></script>
