--- a/Negotiation3/reports/typeR.html
+++ b/Negotiation3/reports/typeR.html
@@ -9,7 +9,7 @@
             margin: 10px;
         }
         body {
-            background-image:url("top-banner-6.png");
+            background-image:url("top-banner-2.png");
             background-position: top left;
             background-repeat: no-repeat;
             background-size: 100%;
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<div align="center">
-        <img src="image-6.png" width="125px" height="125px" class="img-circle">
+        <img src="image-2.png" width="125px" height="125px" class="img-circle">
 	</div>
     <div style="margin:20px">
 		<h4>Type R</h4>
@@ -39,6 +39,10 @@
 			</div>
 		</div>
 	</div>
+	
+	<div style="height:100px">
+	</div>
+		
 			
     <script src="jquery.js"></script>
     <script src="highcharts.js"></script>
