--- a/Negotiation3/reports/typeW.html
+++ b/Negotiation3/reports/typeW.html
@@ -21,7 +21,7 @@
         <img src="image-3.png" width="125px" height="125px" class="img-circle">
 	</div>
     <div style="margin:20px">
-		<h4>Type W</h4>
+		<h4 style="font-weight:400">Type W</h4>
 	</div>
 	
 	<div>
@@ -33,7 +33,7 @@
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe030;" style="font-size: 24px"></span>
 			</div>
-			<div class="col-xs-10" style="font-weight:500">
+			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
 				Check out the skill-building tips and give speciation attention to how you can enhance your skill at reading other people's motivations and craft creative solutions.
 			</div>
 		</div>
