--- a/Negotiation3/reports/typeG+.html
+++ b/Negotiation3/reports/typeG+.html
@@ -1,115 +1,50 @@
-
-<!DOCTYPE html>
-<html>
+<!doctype html>
 <head>
-
-  <title>Dragend JS infinit demo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="css/bootstrap.css" />
-  <link rel="stylesheet" href="css/style.css" />
-
-  <script type="text/javascript" src="jquery-1.11.0.min.js"></script>
-
-
-  <style type="text/css">
-    * {
-      padding: 0;
-      margin: 0;
-      border: 0;
-    }
-
-    body {
-      background: #fff;
-      padding: 15px;
-      font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    }
-
-    #demo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      visibility: hidden;
-      background: #fff;
-      cursor: hand;
-      cursor: -moz-grab;
-      cursor: -webkit-grab;
-      cursor: grab;
-    }
-
-    #dragend {
-      position: absolute;
-      bottom: 50px;
-      right: 50px;
-      background: #345;
-      padding: 18px;
-      color: #fff;
-      border-radius: 3px;
-      width: 150px;
-      font-size: 15px;
-    }
-
-    #dragend h1 {
-      font-size: 15px;
-      font-weight: normal;
-      margin-bottom: 12px;
-    }
-
-    #dragend a {
-      text-decoration: underline;
-      color: #fff
-    }
-
-    #demo p {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 0 30px;
-      margin-bottom: 30px;
-    }
-
-    #demo p:first-child {
-      margin-top: 30px;
-    }
-
-    #demo p:last-child {
-      margin-bottom: 200px;
-    }
-
-  </style>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css" />
+	<link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/docs.css" />
+    <style>
+        .photo {
+            margin: 10px;
+        }
+        body {
+            background-image:url("top-banner-3.png");
+            background-position: top left;
+            background-repeat: no-repeat;
+            background-size: 100%;
+        }
+    </style>
 </head>
 <body>
-	
-	<div class="navbar navbar-default navbar-fixed-top" align="center" role="navigation" style="font-size: 12px; font-weight:100; color: #FF9F33">
-	  <span class="ion-ios7-arrow-thin-left"></span>&nbsp;SWIPE TO VIEW MORE&nbsp;<span class="ion-ios7-arrow-thin-right"></span>
+	<div align="center">
+        <img src="image-3.png" width="125px" height="125px" class="img-circle">
 	</div>
-
-  <div id="demo">
-      <div class="first dragend-page">
-			<p>Two questions you just answered deal with the interpersonal dimension of negotiation, specifically, asserting oneself and understanding others. Research show that most people feel that being relatively good at one of these skills comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship, for example. Or appearing cooperative might be misread as being weak.)</p>
-      </div>
-      <div class="dragend-page">
-			<p>Two other questions on the test address outcomes. Here again, a trade-off is involved. People who feel they are good at one skill tend to think they are relatively weaker with the other. SpecifIcally, good value-creators often are less sure about their ability to get their share of the resulting pie (and conversely).</p>
-      </div>
-      <div class="dragend-page">
-			<p>You can think of the interpersonal scale as representing the "means" of negotiation and the outcome scale as the "ends." Putting the two scales together reveals common bargaining styles. In the example below, the two scales intersect at the zero-zero. Here the user gave himself four 5s for the four skills, counting out from the center for each one.</p>
-      </div>
-      <div class="last dragend-page">
-			<p>Depending on the kinds of negotiations you do, having a lopsided profile may be better. Most of the people who've taken this test fall into one of two categories.</p>
-      </div>
-  </div>
-
-  <script type="text/javascript" src="dragend.js"></script>
-
-  <script>
-
-    $(function() {
-
-		new Dragend(document.getElementById("demo"));
-    });
-
-  </script>
-
+    <div style="margin:20px">
+		<h4 style="font-weight:400">Type G+</h4>
+	</div>
+	
+	<div>
+		<p style="margin: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nibh metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer vitae nulla purus. Duis venenatis, urna at suscipit bibendum, purus ligula blandit quam, in consequat nulla metus et dui.<br><br>Suspendisse laoreet commodo mollis. Quisque ultrices aliquam lacinia. Vestibulum faucibus, purus eget bibendum pellentesque, ante arcu aliquet risus, vel adipiscing metus mauris vel arcu. Morbi sed mollis nisi. Aenean sed eleifend justo. Praesent varius lorem lorem, vitae venenatis nibh commodo vitae.</p>
+	</div>
+	
+	<div class="alert alert-info" style="margin:20px">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe030;" style="font-size: 24px"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nibh metus.
+			</div>
+		</div>
+	</div>	
+	
+	<div style="height:100px">
+	</div>
+	
+    <script src="jquery.js"></script>
+    <script src="highcharts.js"></script>
+    <script src="highcharts-more.js"></script>
+    <script src="modules/exporting.js"></script>
 </body>
 </html>
