--- a/Negotiation3/reports/typeG.html
+++ b/Negotiation3/reports/typeG.html
@@ -21,7 +21,7 @@
         <img src="image-4.png" width="125px" height="125px" class="img-circle">
 	</div>
     <div style="margin:20px">
-		<h4>Type G</h4>
+		<h4 style="font-weight:400">Type G</h4>
 	</div>
 	
 	<div>
@@ -33,8 +33,8 @@
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe030;" style="font-size: 24px"></span>
 			</div>
-			<div class="col-xs-10" style="font-weight:500">
-				Check out the skill-building tips and give speciation attention to how you can enhance your ability to assert your interests and get a decent share of the value you create.
+			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+				Check out the skill-building tips and give special attention to how you can enhance your ability to assert your interests and get a decent share of the value you create.
 			</div>
 		</div>
 	</div>
