--- a/Negotiation3/reports/typeR.html
+++ b/Negotiation3/reports/typeR.html
@@ -21,7 +21,7 @@
         <img src="image-2.png" width="125px" height="125px" class="img-circle">
 	</div>
     <div style="margin:20px">
-		<h4>Type R</h4>
+		<h4 style="font-weight:400">Type R</h4>
 	</div>
 	
 	<div>
@@ -34,7 +34,7 @@
 			<div class="col-xs-1" style="margin-right:10px">
 				<span data-icon="&#xe03d;" style="font-size: 24px"></span>
 			</div>
-			<div class="col-xs-10" style="font-weight:500">
+			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
 				You may want to reconsider the entries that you made.
 			</div>
 		</div>
