Added popover to skills

--- a/Negotiation3/reports/skills.html
+++ b/Negotiation3/reports/skills.html
@@ -14,6 +14,9 @@
             background-repeat: no-repeat;
             background-size: 100%;
         }
+		.popover{
+		    width:200px;
+		}
     </style>
 </head>
 <body>
@@ -26,8 +29,8 @@
     <p style="margin: 20px;">Ideally, we'd all like to outstanding at each of the four skills: asserting our interests, understanding others, creating value, and claiming our share. As we've already seen, each presents a dilemma or tradeoff. Being more open, for example, may invite either a cooperative response or exploitation, depending on whom we're dealing with. Likewise, firmly asserting our interests may win us a larger share, but if the other party digs in, creativity may be hampered.</p>
    	</div>
 	<div class="panel-group" id="accordion" style="margin: 20px;">
-	  <div class="panel panel-info">
-	    <div class="panel-heading">
+	  <div class="panel panel-warning">
+	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
 	          <span data-icon="&#xe049;"></span>&nbsp;Understand the other side
@@ -36,15 +39,15 @@
 	    </div>
 	    <div id="collapseOne" class="panel-collapse collapse">
 			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Inquire. Without realizing it, many negotiators fail to test their assumptions about the other parties needs and perceptions.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Listen deeply. Don't prejudge. Be alert for ideas you can build on.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Consult your own feelings. If you are feeling anxious, maybe they are, too.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">"Go to the balcony." Follow Bill Ury's advice and try to view your interaction as if you were a member of the audience, sitting way back, taking everything in.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Inquire.</strong> Without realizing it, many negotiators fail to test their assumptions about the other parties needs and perceptions.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Listen deeply.</strong> Don't prejudge. Be alert for ideas you can build on.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Consult your own feelings.</strong> If you are feeling anxious, maybe they are, too.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>"Go to the balcony."</strong> Follow <strong><a href="javascript://" id="example1" data-toggle="popover" data-placement="top" title="Bill Ury" data-content="Author of Getting to Yes and Getting Past No" style="color:#ff9f33">Bill Ury's</a></strong> advice and try to view your interaction as if you were a member of the audience, sitting way back, taking everything in.</li>
 			</ul>
 	    </div>
 	  </div>
-	  <div class="panel panel-info">
-	    <div class="panel-heading">
+	  <div class="panel panel-warning">
+	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
 	          <span data-icon="&#xe021;"></span>&nbsp;Assert your interest
@@ -53,15 +56,15 @@
 	    </div>
 	    <div id="collapseTwo" class="panel-collapse collapse">
 			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Build up your BATNA (your walkaway option if there's no deal). The more confident you are about your alternatives, the more secure you'll be negotiating.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Focus on their BATNA (their no-deal alternative). Just because you need them doesn't mean that they don't need you.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Practice in low-stakes situations. Try to be more assertive in situations where it doesn't really matter if you come to agreement.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Don't oversell. Research shows that people in weaker positions tend to talk too much.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Build up your <strong><a href="javascript://" id="example2" data-toggle="popover" data-placement="bottom" title="BATNA" data-content="Best Alternative to a Negotiated Agreement" style="color:#ff9f33">BATNA</a></strong> (your walkaway option if there's no deal). The more confident you are about your alternatives, the more secure you'll be negotiating.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Focus on their <strong>BATNA</strong> (their no-deal alternative). Just because you need them doesn't mean that they don't need you.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Practice</strong> in low-stakes situations. Try to be more assertive in situations where it doesn't really matter if you come to agreement.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Don't oversell.</strong> Research shows that people in weaker positions tend to talk too much.</li>
 	    	</ul>
 	    </div>
 	  </div>
-	  <div class="panel panel-info">
-	    <div class="panel-heading">
+	  <div class="panel panel-warning">
+	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
 	          <span data-icon="&#xe050;"></span>&nbsp;Maximize your share
@@ -70,15 +73,15 @@
 	    </div>
 	    <div id="collapseThree" class="panel-collapse collapse">
 			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Don't get "anchored." Work from your number. Not theirs.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Watch the clock. If the other party is under a deadline, use that to your advantage.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Try "post-settlement settlement." After reaching a firm agreement, suggest that you review the terms to see if adjusting the terms might help both parties.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Avoid the winner's curse. You may wonder if you could have gotten more. The only way to know for sure is to demand too much and blow up the deal.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Don't get <strong><a href="javascript://" id="example3" data-toggle="popover" data-placement="bottom" title="Anchoring" data-content="A cognitive bias that describes the common human tendency to rely too heavily on the first piece of information offered when making decisions" style="color:#ff9f33">"anchored."</a></strong> Work from your number. Not theirs.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Watch the clock.</strong> If the other party is under a deadline, use that to your advantage.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Try <strong>"post-settlement settlement."</strong> After reaching a firm agreement, suggest that you review the terms to see if adjusting the terms might help both parties.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Avoid the <strong>winner's curse.</strong> You may wonder if you could have gotten more. The only way to know for sure is to demand too much and blow up the deal.</li>
 			</ul>
 	    </div>
 	  </div>
-	  <div class="panel panel-info">
-	    <div class="panel-heading">
+	  <div class="panel panel-warning">
+	    <div class="panel-heading" style="background-color: #ff9f33;border-color: #ff9f33;">
 	      <h4 class="panel-title">
 	        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
 	          <span data-icon="&#xe016;"></span>&nbsp;Create value
@@ -87,10 +90,10 @@
 	    </div>
 	    <div id="collapseFour" class="panel-collapse collapse">
 			<ul class="list-group">
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Negotiate how you negotiate. </li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Use your interpersonal skills to build trust.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Make mutually beneficial trades by identifying differences in valuation, expectations, and attitudes toward risk.</li>
-		        <li class="list-group-item" style="text-align: left; font-size:14px">Don't play the wrong game. It's hard to haggle and be creative at the same time.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Negotiate how you negotiate.</strong> </li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px">Use your <strong>interpersonal skills</strong> to build trust.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Make mutually beneficial trades</strong> by identifying differences in valuation, expectations, and attitudes toward risk.</li>
+		        <li class="list-group-item" style="text-align: left; font-size:14px"><strong>Don't play the wrong game.</strong> It's hard to haggle and be creative at the same time.</li>
 		    </ul>
 	    </div>
 	  </div>
@@ -105,5 +108,13 @@
     <script src="modules/exporting.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/collapse.js"></script>
+    <script src="js/popover.js"></script>
+	<script>
+		$(function () {
+		    $('#example1').popover();
+		    $('#example2').popover();
+		    $('#example3').popover();
+		});
+	</script>
 </body>
 </html>
