--- a/Negotiation3/reports/michael_wheeler.html
+++ b/Negotiation3/reports/michael_wheeler.html
@@ -22,7 +22,7 @@
 	</div>
 	<div>
         <p style="margin: 20px;">
-            <strong>Michael Wheeler</strong> is an author, professor, and mediator whose work is at the forefront of negotiation scholarship and practice. He is a professor of Management Practice at the <a href="http://www.hbs.edu/" style="color:red">Harvard Business School</a> where he teaches Negotiation as well as a variety of executive courses. He advises corporate clients, trade organizations, and government agencies on negotiation issues in the United States and abroad.
+            <strong>Michael Wheeler</strong> is an author, professor, and mediator whose work is at the forefront of negotiation scholarship and practice. He is a professor of Management Practice at the <strong><a href="http://www.hbs.edu/" style="color:#ff9f33">Harvard Business School</a></strong> where he teaches Negotiation as well as a variety of executive courses. He advises corporate clients, trade organizations, and government agencies on negotiation issues in the United States and abroad.
         </p>
     </div>
 
@@ -39,7 +39,7 @@
     </ul>
 -->
 
-    <div class="list-group">
+    <div class="list-group" style="font-weight:400">
       <a href="http://www.negotiation3-0.com/" class="list-group-item">Negotiation 3.0 Website</a>
       <a href="https://www.linkedin.com/today/influencer/266437464-Michael-Wheeler"  class="list-group-item">LinkedIn Influencer Blog</a>
       <a href="https://itunes.apple.com/us/book/the-art-of-negotiation/id576508269?mt=11"  class="list-group-item"><i>The Art of Negotiation</i> Book</a>
