--- a/Negotiation3/reports/delimaY.html
+++ b/Negotiation3/reports/delimaY.html
@@ -54,11 +54,11 @@
     <ul>
       <li class="first dragend-page">
 		    <div id="interpersonalDimension" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>Two questions you answered deal with the interpersonal dimension of negotiation: asserting oneself and understanding others. Research show that most people feel that being relatively good at one of these skills comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship or appearing cooperative might be misread as being weak.)</p>
+			<p>Two questions you answered deal with the <strong>interpersonal</strong> dimension of negotiation: <i>asserting oneself</i> and <i>understanding others</i>. Research show that most people feel that being relatively good at one of these skills comes at the cost of being less effective at the other. (Being firm about your demands could stress a relationship or appearing cooperative might be misread as being weak.)</p>
       </li>
       <li class="dragend-page">
 		    <div id="outcomeDimension" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
-			<p>Two other questions on the test address outcomes. Here again, a trade-off is involved. People who feel they are good at one skill tend to think they are relatively weaker with the other. Specifically, good value-creators often are less sure about their ability to get their share of the resulting pie (and conversely).</p>
+			<p>Two other questions on the test address <strong>outcomes</strong>. Here again, a trade-off is involved. People who feel they are good at one skill tend to think they are relatively weaker with the other. Specifically, good value-creators often are less sure about their ability to get their share of the resulting pie (and conversely).</p>
       </li>
       <li class="middle dragend-page">
 		    <div id="equalRatings" style="margin: 30px auto 10px; width: 280px; height: 200px"></div>
