--- a/Negotiation3/reports/michael_wheeler.html
+++ b/Negotiation3/reports/michael_wheeler.html
@@ -22,8 +22,7 @@
 	</div>
 	<div>
         <p style="margin: 20px;">
-            <strong>Michael Wheeler</strong> is an author, professor, and mediator whose work is at the forefront of negotiation scholarship and practice. He is a professor of Management Practice at the <strong><a href="http://www.hbs.edu/" style="color:#ff9f33">Harvard Business School</a></strong> where he teaches Negotiation as well as a variety of executive courses. He advises corporate clients, trade organizations, and government agencies on negotiation issues in the United States and abroad.
-        </p>
+            <strong>Michael Wheeler</strong> is an award-winning author, professor, and mediator whose work is at the forefront of negotiation scholarship and practice. Over the past twenty years at the  <strong><a href="http://www.hbs.edu/" style="color:#ff9f33">Harvard Business School</a></strong> he has taught negotiation to thousands of MBA students and executive program participants. He also advises corporate clients, trade organizations, and government agencies on negotiation issues in the United States and abroad.</p>
     </div>
 
 <!--    
