--- a/Negotiation3/reports/resources.html
+++ b/Negotiation3/reports/resources.html
@@ -20,21 +20,58 @@
 	<div align="center">
         <img src="image-8.png" width="125px" height="125px" class="img-circle">
 	</div>
-    <div style="margin:20px">
-		<h4 style="font-weight:400">Negotiation Resources</h4>
+
+	<div class="alert alert-info" style="margin:20px">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe052;" style="font-size: 24px"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+				For free downloads of practice guides and research articles about the negotiation skills highlighted in this app (and about negotiation more generally), visit the <strong><a href="http://www.negotiation3-0.com/" class="alert-link" style="color:#fff;text-decoration:underline">Negotiation 3.0 Website</a></strong>
+			</div>
+		</div>
 	</div>
 	
-	<div>
-		<p style="margin: 20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nibh metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer vitae nulla purus. Duis venenatis, urna at suscipit bibendum, purus ligula blandit quam, in consequat nulla metus et dui.<br><br>Suspendisse laoreet commodo mollis. Quisque ultrices aliquam lacinia. Vestibulum faucibus, purus eget bibendum pellentesque, ante arcu aliquet risus, vel adipiscing metus mauris vel arcu. Morbi sed mollis nisi. Aenean sed eleifend justo. Praesent varius lorem lorem, vitae venenatis nibh commodo vitae.</p>
+	<div class="alert alert-info" style="margin:20px">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe052;" style="font-size: 24px"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+				Another excellent resource is the <strong><a href="http://www.pon.harvard.edu/" class="alert-link" style="color:#fff;text-decoration:underline">The Program on Negotiation</a></strong> based at the Harvard Law School
+			</div>
+		</div>
+	</div>
+	
+	<div class="alert alert-info" style="margin:20px">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe00b;" style="font-size: 24px"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+				Michael Wheeler's <a href="https://itunes.apple.com/us/book/the-art-of-negotiation/id576508269?mt=11" class="alert-link" style="color:#fff;text-decoration:underline"><i>The Art of Negotiation</i></a> (especially the chapters on openings, critical moments, and closing)
+			</div>
+		</div>
 	</div>
 
 	<div class="alert alert-info" style="margin:20px">
 		<div class="row">
 			<div class="col-xs-1" style="margin-right:10px">
-				<span data-icon="&#xe030;" style="font-size: 24px"></span>
+				<span data-icon="&#xe00b;" style="font-size: 24px"></span>
 			</div>
 			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nibh metus.
+				David Lax and James Sebenius's <a href="https://itunes.apple.com/us/book/manager-as-negotiator/id381492420?mt=11" class="alert-link" style="color:#fff;text-decoration:underline"><i>The Manager as Negotiator</i></a> (in particular, the chapter on creating and claiming value)
+			</div>
+		</div>
+	</div>
+
+	<div class="alert alert-info" style="margin:20px">
+		<div class="row">
+			<div class="col-xs-1" style="margin-right:10px">
+				<span data-icon="&#xe00b;" style="font-size: 24px"></span>
+			</div>
+			<div class="col-xs-10" style="font-weight:400; line-height:1.14285714285714">
+				<a href="http://www.amazon.com/Beyond-Winning-Negotiating-Create-Disputes/dp/0674012313" class="alert-link" style="color:#fff;text-decoration:underline"><i>Beyond Winning</a></i> (notably, the chapter on empathy and assertiveness), by Robert Mnookin, Scott Peppet, and Andrew Tulumello		
 			</div>
 		</div>
 	</div>
